no funciona incluso con angular

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,10 +4,12 @@ WORKDIR /usr/app
 
 COPY package*.json ./
 
-RUN npm install -qy
+RUN npm install -g @angular/cli@7.3.9
+RUN npm install npm install node-sass --save-dev
+RUN npm install --unsafe-perm=true --allow-root
 
 COPY . .
 
 EXPOSE 4200
 
-CMD ["npm", "start"]
+CMD ["npm", "start "]
