--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "scripts": {
         "ng": "ng",
         "conventional-changelog": "conventional-changelog",
-        "start": "ng serve --host 10.20.189.87",
+        "start": "ng serve",
         "build": "ng build",
         "build:prod": "npm run build -- --prod --aot",
         "test": "ng test",
