--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "core-js": "2.5.1",
         "echarts": "^4.0.2",
         "font-awesome": "4.7.0",
+        "hammerjs": "^2.0.8",
         "html2canvas": "^1.0.0-alpha.12",
         "intl": "1.2.5",
         "ionicons": "2.0.1",
@@ -75,6 +76,7 @@
         "ng2-ckeditor": "1.1.13",
         "ng2-smart-table": "1.2.2",
         "ngx-echarts": "2.0.1",
+        "node-sass": "^4.12.0",
         "normalize.css": "6.0.0",
         "nuxeo": "^3.6.0",
         "pace-js": "1.0.2",
